revert(重构kratos项目模板):
