# kratos/api/demo/v1/demo_grpc.pb.go
@@ -1,0 +1,167 @@
+// Code generated by protoc-gen-go-grpc. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-grpc v1.6.0
+// - protoc             v6.33.1
+// source: demo/v1/demo.proto
+
+package v1
+
+import (
+	context "context"
+	grpc "google.golang.org/grpc"
+	codes "google.golang.org/grpc/codes"
+	status "google.golang.org/grpc/status"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the grpc package it is being compiled against.
+// Requires gRPC-Go v1.64.0 or later.
+const _ = grpc.SupportPackageIsVersion9
+
+const (
+	Demo_GetHello_FullMethodName     = "/api.demo.v1.Demo/GetHello"
+	Demo_CheckHealthy_FullMethodName = "/api.demo.v1.Demo/CheckHealthy"
+)
+
+// DemoClient is the client API for Demo service.
+//
+// For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
+//
+// Demo service provides example API endpoints
+type DemoClient interface {
+	// GetHello returns a hello message
+	GetHello(ctx context.Context, in *GetHelloRequest, opts ...grpc.CallOption) (*Reply, error)
+	// Health check endpoint
+	CheckHealthy(ctx context.Context, in *CheckHealthyRequest, opts ...grpc.CallOption) (*CheckHealthyResponse, error)
+}
+
+type demoClient struct {
+	cc grpc.ClientConnInterface
+}
+
+func NewDemoClient(cc grpc.ClientConnInterface) DemoClient {
+	return &demoClient{cc}
+}
+
+func (c *demoClient) GetHello(ctx context.Context, in *GetHelloRequest, opts ...grpc.CallOption) (*Reply, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(Reply)
+	err := c.cc.Invoke(ctx, Demo_GetHello_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+func (c *demoClient) CheckHealthy(ctx context.Context, in *CheckHealthyRequest, opts ...grpc.CallOption) (*CheckHealthyResponse, error) {
+	cOpts := append([]grpc.CallOption{grpc.StaticMethod()}, opts...)
+	out := new(CheckHealthyResponse)
+	err := c.cc.Invoke(ctx, Demo_CheckHealthy_FullMethodName, in, out, cOpts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
+// DemoServer is the server API for Demo service.
+// All implementations must embed UnimplementedDemoServer
+// for forward compatibility.
+//
+// Demo service provides example API endpoints
+type DemoServer interface {
+	// GetHello returns a hello message
+	GetHello(context.Context, *GetHelloRequest) (*Reply, error)
+	// Health check endpoint
+	CheckHealthy(context.Context, *CheckHealthyRequest) (*CheckHealthyResponse, error)
+	mustEmbedUnimplementedDemoServer()
+}
+
+// UnimplementedDemoServer must be embedded to have
+// forward compatible implementations.
+//
+// NOTE: this should be embedded by value instead of pointer to avoid a nil
+// pointer dereference when methods are called.
+type UnimplementedDemoServer struct{}
+
+func (UnimplementedDemoServer) GetHello(context.Context, *GetHelloRequest) (*Reply, error) {
+	return nil, status.Error(codes.Unimplemented, "method GetHello not implemented")
+}
+func (UnimplementedDemoServer) CheckHealthy(context.Context, *CheckHealthyRequest) (*CheckHealthyResponse, error) {
+	return nil, status.Error(codes.Unimplemented, "method CheckHealthy not implemented")
+}
+func (UnimplementedDemoServer) mustEmbedUnimplementedDemoServer() {}
+func (UnimplementedDemoServer) testEmbeddedByValue()              {}
+
+// UnsafeDemoServer may be embedded to opt out of forward compatibility for this service.
+// Use of this interface is not recommended, as added methods to DemoServer will
+// result in compilation errors.
+type UnsafeDemoServer interface {
+	mustEmbedUnimplementedDemoServer()
+}
+
+func RegisterDemoServer(s grpc.ServiceRegistrar, srv DemoServer) {
+	// If the following call panics, it indicates UnimplementedDemoServer was
+	// embedded by pointer and is nil.  This will cause panics if an
+	// unimplemented method is ever invoked, so we test this at initialization
+	// time to prevent it from happening at runtime later due to I/O.
+	if t, ok := srv.(interface{ testEmbeddedByValue() }); ok {
+		t.testEmbeddedByValue()
+	}
+	s.RegisterService(&Demo_ServiceDesc, srv)
+}
+
+func _Demo_GetHello_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(GetHelloRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(DemoServer).GetHello(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Demo_GetHello_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(DemoServer).GetHello(ctx, req.(*GetHelloRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+func _Demo_CheckHealthy_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(CheckHealthyRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(DemoServer).CheckHealthy(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Demo_CheckHealthy_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(DemoServer).CheckHealthy(ctx, req.(*CheckHealthyRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
+// Demo_ServiceDesc is the grpc.ServiceDesc for Demo service.
+// It's only intended for direct use with grpc.RegisterService,
+// and not to be introspected or modified (even as a copy)
+var Demo_ServiceDesc = grpc.ServiceDesc{
+	ServiceName: "api.demo.v1.Demo",
+	HandlerType: (*DemoServer)(nil),
+	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "GetHello",
+			Handler:    _Demo_GetHello_Handler,
+		},
+		{
+			MethodName: "CheckHealthy",
+			Handler:    _Demo_CheckHealthy_Handler,
+		},
+	},
+	Streams:  []grpc.StreamDesc{},
+	Metadata: "demo/v1/demo.proto",
+}
