# kratos/api/demo/v1/demo_http.pb.go
@@ -1,0 +1,117 @@
+// Code generated by protoc-gen-go-http. DO NOT EDIT.
+// versions:
+// - protoc-gen-go-http v2.9.0
+// - protoc             v6.33.1
+// source: demo/v1/demo.proto
+
+package v1
+
+import (
+	context "context"
+	http "github.com/go-kratos/kratos/v2/transport/http"
+	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
+)
+
+// This is a compile-time assertion to ensure that this generated file
+// is compatible with the kratos package it is being compiled against.
+var _ = new(context.Context)
+var _ = binding.EncodeURL
+
+const _ = http.SupportPackageIsVersion1
+
+const OperationDemoCheckHealthy = "/api.demo.v1.Demo/CheckHealthy"
+const OperationDemoGetHello = "/api.demo.v1.Demo/GetHello"
+
+type DemoHTTPServer interface {
+	// CheckHealthy Health check endpoint
+	CheckHealthy(context.Context, *CheckHealthyRequest) (*CheckHealthyResponse, error)
+	// GetHello GetHello returns a hello message
+	GetHello(context.Context, *GetHelloRequest) (*Reply, error)
+}
+
+func RegisterDemoHTTPServer(s *http.Server, srv DemoHTTPServer) {
+	r := s.Route("/")
+	r.GET("/demo/hello", _Demo_GetHello0_HTTP_Handler(srv))
+	r.GET("/demo/health", _Demo_CheckHealthy0_HTTP_Handler(srv))
+}
+
+func _Demo_GetHello0_HTTP_Handler(srv DemoHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in GetHelloRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDemoGetHello)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.GetHello(ctx, req.(*GetHelloRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*Reply)
+		return ctx.Result(200, reply)
+	}
+}
+
+func _Demo_CheckHealthy0_HTTP_Handler(srv DemoHTTPServer) func(ctx http.Context) error {
+	return func(ctx http.Context) error {
+		var in CheckHealthyRequest
+		if err := ctx.BindQuery(&in); err != nil {
+			return err
+		}
+		http.SetOperation(ctx, OperationDemoCheckHealthy)
+		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
+			return srv.CheckHealthy(ctx, req.(*CheckHealthyRequest))
+		})
+		out, err := h(ctx, &in)
+		if err != nil {
+			return err
+		}
+		reply := out.(*CheckHealthyResponse)
+		return ctx.Result(200, reply)
+	}
+}
+
+type DemoHTTPClient interface {
+	// CheckHealthy Health check endpoint
+	CheckHealthy(ctx context.Context, req *CheckHealthyRequest, opts ...http.CallOption) (rsp *CheckHealthyResponse, err error)
+	// GetHello GetHello returns a hello message
+	GetHello(ctx context.Context, req *GetHelloRequest, opts ...http.CallOption) (rsp *Reply, err error)
+}
+
+type DemoHTTPClientImpl struct {
+	cc *http.Client
+}
+
+func NewDemoHTTPClient(client *http.Client) DemoHTTPClient {
+	return &DemoHTTPClientImpl{client}
+}
+
+// CheckHealthy Health check endpoint
+func (c *DemoHTTPClientImpl) CheckHealthy(ctx context.Context, in *CheckHealthyRequest, opts ...http.CallOption) (*CheckHealthyResponse, error) {
+	var out CheckHealthyResponse
+	pattern := "/demo/health"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationDemoCheckHealthy))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
+
+// GetHello GetHello returns a hello message
+func (c *DemoHTTPClientImpl) GetHello(ctx context.Context, in *GetHelloRequest, opts ...http.CallOption) (*Reply, error) {
+	var out Reply
+	pattern := "/demo/hello"
+	path := binding.EncodeURL(pattern, in, true)
+	opts = append(opts, http.Operation(OperationDemoGetHello))
+	opts = append(opts, http.PathTemplate(pattern))
+	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return &out, nil
+}
