# kratos/api/explorer/v1/common_http.pb.go
@@ -1,76 +1,0 @@
-// Code generated by protoc-gen-go-http. DO NOT EDIT.
-// versions:
-// - protoc-gen-go-http v2.8.4
-// - protoc             v5.29.3
-// source: explorer/v1/common.proto
-
-package v1
-
-import (
-	context "context"
-	http "github.com/go-kratos/kratos/v2/transport/http"
-	binding "github.com/go-kratos/kratos/v2/transport/http/binding"
-	emptypb "google.golang.org/protobuf/types/known/emptypb"
-)
-
-// This is a compile-time assertion to ensure that this generated file
-// is compatible with the kratos package it is being compiled against.
-var _ = new(context.Context)
-var _ = binding.EncodeURL
-
-const _ = http.SupportPackageIsVersion1
-
-const OperationBasicPing = "/api.explorer.v1.Basic/Ping"
-
-type BasicHTTPServer interface {
-	Ping(context.Context, *emptypb.Empty) (*PingReply, error)
-}
-
-func RegisterBasicHTTPServer(s *http.Server, srv BasicHTTPServer) {
-	r := s.Route("/")
-	r.GET("/basic/ping", _Basic_Ping0_HTTP_Handler(srv))
-}
-
-func _Basic_Ping0_HTTP_Handler(srv BasicHTTPServer) func(ctx http.Context) error {
-	return func(ctx http.Context) error {
-		var in emptypb.Empty
-		if err := ctx.BindQuery(&in); err != nil {
-			return err
-		}
-		http.SetOperation(ctx, OperationBasicPing)
-		h := ctx.Middleware(func(ctx context.Context, req interface{}) (interface{}, error) {
-			return srv.Ping(ctx, req.(*emptypb.Empty))
-		})
-		out, err := h(ctx, &in)
-		if err != nil {
-			return err
-		}
-		reply := out.(*PingReply)
-		return ctx.Result(200, reply)
-	}
-}
-
-type BasicHTTPClient interface {
-	Ping(ctx context.Context, req *emptypb.Empty, opts ...http.CallOption) (rsp *PingReply, err error)
-}
-
-type BasicHTTPClientImpl struct {
-	cc *http.Client
-}
-
-func NewBasicHTTPClient(client *http.Client) BasicHTTPClient {
-	return &BasicHTTPClientImpl{client}
-}
-
-func (c *BasicHTTPClientImpl) Ping(ctx context.Context, in *emptypb.Empty, opts ...http.CallOption) (*PingReply, error) {
-	var out PingReply
-	pattern := "/basic/ping"
-	path := binding.EncodeURL(pattern, in, true)
-	opts = append(opts, http.Operation(OperationBasicPing))
-	opts = append(opts, http.PathTemplate(pattern))
-	err := c.cc.Invoke(ctx, "GET", path, nil, &out, opts...)
-	if err != nil {
-		return nil, err
-	}
-	return &out, nil
-}
